# log4stdc

./: .clang-format  Doxyfile  LICENSE.txt  Makefile.am  Makefile.in  Nmakefile  README.md  c600.mak  cf.sh  config.h.in  configure  configure.ac  format-sources.sh  log4j.xml  log4stdc.sln  log4stdc.vcxproj  m600  macroargs.sed  makenmake.sh  testlink.cpp  win32.mak
barefootc/: Makefile.am  atomic.h  baseobject.c  bfc_clone_new.c  bfc_clone_object.c  bfc_decr_refcount.c  bfc_delete_object.c  bfc_destroy_object.c  bfc_incr_refcount.c  bfc_init_object.c  bfc_init_refcount.c  bfc_instanceof.c  bfc_new_object.c  bfc_object_dump.c  bfc_object_equal.c  bfc_object_hashcode.c  bfc_object_length.c  bfc_object_size.c  bfc_object_tostring.c  bfc_swap_objects.c  boolean_object.c  cf.sh  configure.ac  container.h  datetime.h  integer_object.c  iterator.h  linkedlist.h  log4j.properties  log4j.xml  map.h  mempool.h  number.h  object.h  pair.h  posix_mutex.c  real_number_object.c  string.h  synchronization.h  testlink.cpp  (+6 more)
barefootc/barefootc/: baseobject.c  bfc_delete_object.c  bfc_destroy_object.c  bfc_init_object.c  bfc_object_dump.c  bfc_object_equal.c  bfc_object_length.c  bfc_object_tostring.c  mempool.h  object.h  posix_mutex.c  synchronization.h  vector.h  win32_mutex.c
barefootc/containers/: vector_set.c  vector_test.c
barefootc/log4cxx/: basicconfigurator.cpp  class.cpp  domconfigurator.cpp  exception.cpp  file.cpp  level.cpp  loader.cpp  locationinfo.cpp  objectimpl.cpp  properties.cpp  repository.cpp  repository.h
barefootc/log4stdc/: appender.c  fileappender.c  l4sc_log.c  l4sc_logger_enabled.c  l4sc_logprintf.c  layout.c  log4stdc.h  logger.c  logmessage.c  logobjects.h  object.c  propertyconfigurator.c  xmlconfigurator.c
barefootc/mempools/: defaultpool.c  stdcpool.c
bareftc/: atomic.h  mempool.h  mutex.h  object.h  utf8.h
containers/: bfc_container_assign_copy.c  bfc_container_assign_fill.c  bfc_container_assign_range.c  bfc_container_begin_iterator.c  bfc_container_capacity.c  bfc_container_cindex.c  bfc_container_copy_out.c  bfc_container_create_element.c  bfc_container_element_size.c  bfc_container_end_iterator.c  bfc_container_erase_element.c  bfc_container_erase_range.c  bfc_container_find_by_name.c  bfc_container_find_element.c  bfc_container_first.c  bfc_container_get_pool.c  bfc_container_getlong.c  bfc_container_index.c  bfc_container_insert_element.c  bfc_container_insert_fill.c  bfc_container_insert_range.c  bfc_container_max_size.c  bfc_container_place.c  bfc_container_pop_back.c  bfc_container_pop_front.c  bfc_container_push_back.c  bfc_container_push_front.c  bfc_container_reserve.c  bfc_container_resize.c  bfc_container_setlong.c  bfc_container_swap.c  bfc_iterator_getlong.c  bfc_iterator_index.c  bfc_node_append.c  bfc_node_append_c_str.c  bfc_node_append_child.c  bfc_node_append_text.c  bfc_node_decode_xml.c  bfc_node_encode_xml.c  bfc_node_get_attribute_string.c  (+25 more)
datetime/: bfc_datetime_days_to_date.c  bfc_datetime_frac_from_decimal.c  bfc_datetime_to_gmtime.c  bfc_datetime_to_isodate.c  bfc_datetime_to_local_isodate.c  bfc_datetime_to_localtime.c  bfc_datetime_to_world_isodate.c  bfc_datetime_to_worldtime.c  bfc_init_current_datetime.c  bfc_init_datetime_from_isotime.c  datetime.c  umul32_hiword.h
examples/: barefootc_log_redirect.c  redirect.c
iterators/: bfc_iterator_element_size.c  bfc_iterator_setlong.c  bfc_parse_xmltags.c  bfc_tag_get_attrs.c  bfc_tag_get_name.c  bfc_tag_get_namespace_prefix.c  cstr_iterator.c  intarray_iterator.c  iterator.c  null_iterator.c  source_iterator.c  utf8_iterator.c  vector_iterator.c  wstr_iterator.c  xmltag_iterator.c
log4cxx/: Makefile  classregistration.cpp  file.cpp  logger.cpp  mutex.cpp  objectptr.cpp  pool.cpp  propertyconfigurator.cpp  testlink.c  transcoder.cpp
log4stdc/: appender.c  compat.h  enabled.c  fileappd.c  fileappender.c  filecfg.c  fmtjtime.c  fmtmsg.c  jsonstrm.c  l4jstrm.c  l4sc_formatmsg.c  l4sc_log.c  l4sc_logger_enabled.c  l4sc_logprintf.c  l4sc_posix_mutex.c  l4sc_vlg.c  l4sc_vlog.c  l4sc_win32_mutex.c  l4scpool.c  l4stdcpool.c  layout.c  log4stdc.h  logger.c  logmessage.c  logmsg.c  logobjects.h  logobjs.h  logprf.c  object.c  pmutex.c  propcfg.c  propertyconfigurator.c  sappendr.c  snprintf.c  sockappd.c  sparent.c  sslappdr.c  strcfg.c  vsnprntf.c  wmutex.c  (+3 more)
mempools/: chainedpool.c  pool_hierarchy.c  sortingpool.c  stdcpool.c
strings/: basic_string.c  basic_stringbuffer.c  basic_wstring.c  bfc_basic_string_replace_ranges.c  bfc_init_basic_string_copy.c  bfc_init_basic_string_move.c  bfc_init_basic_string_range.c  bfc_init_basic_string_substr.c  bfc_init_basic_wstring_copy.c  bfc_init_basic_wstring_move.c  bfc_init_basic_wstring_range.c  bfc_init_basic_wstring_substr.c  bfc_init_shared_string_range.c  bfc_init_shared_string_substr.c  bfc_init_shared_wstring_range.c  bfc_init_shared_wstring_substr.c  bfc_init_string_copy.c  bfc_init_string_fill.c  bfc_init_string_move.c  bfc_init_string_range.c  bfc_init_string_substr.c  bfc_init_wstring_copy.c  bfc_init_wstring_fill.c  bfc_init_wstring_move.c  bfc_init_wstring_range.c  bfc_init_wstring_substr.c  bfc_strdata.c  bfc_string_append.c  bfc_string_append_buffer.c  bfc_string_append_c_str.c  bfc_string_append_copy.c  bfc_string_append_fill.c  bfc_string_append_iter_range.c  bfc_string_append_range.c  bfc_string_append_substr.c  bfc_string_assign.c  bfc_string_assign_buffer.c  bfc_string_assign_c_str.c  bfc_string_assign_copy.c  bfc_string_assign_fill.c  (+121 more)
tests/appender/: jsonsock.c  l4cxsock.cpp  l4j2sock.c  l4jsock.c  xmlsock.c
tests/datetime/: advance.c  init_current.c  init_isotime.c  isotime.c  msecs_between.c  nsecs_between.c  secs_between.c  to_isodate.c  usecs_between.c
tests/format/: currtime.c  jsonws.c  l4j2strm.c  pattern.c  snprintf.c
tests/iterators/: cxxiterator.h  parse_xmltags_string.c
tests/map/: add_to_string_map.c  allocator.pass.cpp  assign_copy.pass.cpp  assign_init.pass.cpp  assign_move.pass.cpp  at.pass.cpp  bucket.pass.cpp  bucket_count.pass.cpp  bucket_size.pass.cpp  clear.pass.cpp  compare.pass.cpp  (+57 more)
(+553 files in other folders)
